tests/preproc/define/fail005.ds.out.expected
./preproc/define/fail005.ds:2:7: error: expected macro identifier
 2 | #undef
   |       ^
./preproc/define/fail005.ds: info: warnings 0, errors 1
